# menu-generator

./: Cargo.toml  build.sh
src/: main.rs
templates/: layout.tex.hbs
