[package]
name = "menu-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
handlebars = "4.3.3"
indexmap = "1.9.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
